# landscape

./: .gitignore  Cargo.toml  LIGHTING_README.md  README.md  ROADMAP.md  bevy_terrain_handoff.md  claude.md  erosion_implementation.md  landscape.toml  level.json  loose_ends.md  material_system.md  performance_roadmap.md  physics_roadmap.md  preferences.json  procgen_heightmap.md  water_rendering_roadmap.md
.github/agents/: adversarial-debug-loop.agent.md  hypothesis-challenger.agent.md  regression-skeptic.agent.md
.github/prompts/: adversarial-debug-inline.prompt.md  adversarial-debug.prompt.md  dbg.prompt.md
assets/: level.json
assets/shaders/: detail_synthesis.wgsl  grass.wgsl  grass_blade.wgsl  grass_blade_prepass.wgsl  terrain_common.wgsl  terrain_fragment.wgsl  terrain_noise.wgsl  terrain_prepass.wgsl  terrain_vertex.wgsl  water_fragment.wgsl  water_vertex.wgsl
assets/textures/marble_cliff_01_4k.blend/: marble_cliff_01_4k.blend
crates/bevy_landscape/: Cargo.toml  README.md
crates/bevy_landscape/src/: bake.rs  foliage.rs  foliage_backend.rs  foliage_entities.rs  foliage_generation.rs  foliage_gpu.rs  foliage_gpu_grass.rs  foliage_instance_gen.rs  foliage_plugin.rs  foliage_reload.rs  foliage_render.rs  foliage_stream_queue.rs  foliage_tiles.rs  grass_material.rs  grass_mesh.rs  level.rs  lib.rs  metadata.rs  painted_splatmap.rs  texture_arrays.rs
crates/bevy_landscape/src/foliage/: backend.rs  generation.rs  gpu.rs  instance_gen.rs  mod.rs  reload.rs  render.rs  stream_queue.rs  tiles.rs
crates/bevy_landscape/src/terrain/: clipmap.rs  clipmap_texture.rs  collision.rs  components.rs  config.rs  debug.rs  detail_synthesis.rs  material.rs  material_slots.rs  math.rs  mod.rs  patch_mesh.rs  pbr_textures.rs  physics_colliders.rs  residency.rs  resources.rs  source_heightmap.rs  streamer.rs  synthesis_cpu.rs  world_desc.rs
crates/bevy_landscape/src/terrain/render/: extract.rs  mod.rs  prepare.rs
crates/bevy_landscape_clouds/: Cargo.toml
crates/bevy_landscape_clouds/src/: compute.rs  config.rs  images.rs  lib.rs  render.rs  uniforms.rs
crates/bevy_landscape_clouds/src/shaders/: clouds_compute.wgsl  clouds_display.wgsl  volumetric_clouds.wgsl
crates/bevy_landscape_editor/: Cargo.toml
crates/bevy_landscape_editor/src/: cloud_panel.rs  diffusion_panel.rs  fog_panel.rs  foliage_panel.rs  generator_panel.rs  import.rs  level_io.rs  lib.rs  material_panel.rs  preferences.rs  rendering_panel.rs  sky_panel.rs  synthesis_panel.rs  texture_browser.rs  toolbar.rs  water_panel.rs
crates/bevy_landscape_generator/: Cargo.toml
crates/bevy_landscape_generator/src/: compute.rs  erosion_compute.rs  erosion_images.rs  erosion_params.rs  export.rs  images.rs  lib.rs  params.rs  terrain_fn.rs  uniforms.rs
crates/bevy_landscape_generator/src/shaders/: erosion.wgsl  generator.wgsl
crates/bevy_landscape_water/: Cargo.toml
crates/bevy_landscape_water/assets/shaders/: water_bindings.wgsl  water_fragment.wgsl  water_functions.wgsl  water_ssr.wgsl  water_vertex.wgsl
crates/bevy_landscape_water/src/: fft_ocean.rs  fft_ocean_compute.rs  lib.rs  material.rs
crates/bevy_landscape_water/src/shaders/: ocean_fft.wgsl
memory/: project_landscape.md
src/: app_config.rs  main.rs  player.rs
src/terrain/: clipmap.rs  clipmap_texture.rs  collision.rs  components.rs  config.rs  debug.rs  macro_color.rs  material.rs  math.rs  mod.rs  residency.rs  resources.rs  streamer.rs  world_desc.rs
src/terrain/render/: extract.rs  gpu_types.rs  mod.rs  pipelines.rs  prepare.rs  queue.rs
