[package]
name = "landscape"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
bytemuck = { version = "1", features = ["derive"] }
exr = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
