[package]
name = "landscape"
version = "0.1.0"
edition = "2021"
default-run = "landscape"

[dependencies]
bevy = { version = "0.18" }
bytemuck = { version = "1", features = ["derive"] }
exr = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# dynamic_linking speeds up dev iteration by splitting Bevy into a shared
# library. It works on Linux/macOS but causes LNK2019 linker errors on Windows
# in release mode (std symbols split across bevy_dylib.dll boundary), so it
# is restricted to Unix only.
[target.'cfg(unix)'.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
