[workspace]
members = [
    ".",
    "crates/bevy_landscape",
    "crates/bevy_landscape_clouds",
    "crates/bevy_landscape_editor",
]
resolver = "2"

[package]
name = "landscape"
version = "0.1.0"
edition = "2021"
default-run = "landscape"

[dependencies]
bevy_landscape = { path = "crates/bevy_landscape" }
bevy_landscape_clouds = { path = "crates/bevy_landscape_clouds" }
bevy_landscape_editor = { path = "crates/bevy_landscape_editor" }
bevy = { version = "0.18" }
avian3d = "0.6"
bytemuck = { version = "1", features = ["derive"] }
exr = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
trace_tracy = ["bevy/trace_tracy"]
trace_chrome = ["bevy/trace_chrome"]

[dev-dependencies]
tempfile = "3"

# dynamic_linking speeds up dev iteration by splitting Bevy into a shared
# library. It works on Linux/macOS but causes LNK2019 linker errors on Windows
# in release mode (std symbols split across bevy_dylib.dll boundary), so it
# is restricted to Unix only.
[target.'cfg(unix)'.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
