[package]
name = "bevy_landscape_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18" }
bevy_egui = { version = "0.39" }
bevy_landscape = { path = "../bevy_landscape" }
bevy_landscape_clouds = { path = "../bevy_landscape_clouds" }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
