[package]
name = "bevy_landscape_water"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18" }
bevy_landscape = { path = "../bevy_landscape" }
bevy_water = { path = "../../../bevy_water", default-features = false, features = ["embed_shaders"] }

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
